@@ -2,7 +2,7 @@
 
 <a href="#0">JVM </a>  
 &emsp;<a href="#1">1. 面试题</a>  
-&emsp;<a href="#2">2. 虚拟机数据区</a>  
+&emsp;<a href="#2">2. 虚拟机内存区域</a>  
 &emsp;&emsp;<a href="#3">2.1. 程序计数器</a>  
 &emsp;&emsp;<a href="#4">2.2. Java虚拟机栈</a>  
 &emsp;&emsp;<a href="#5">2.3. 本地方法栈</a>  
@@ -10,89 +10,99 @@
 &emsp;&emsp;<a href="#7">2.5. 方法区</a>  
 &emsp;&emsp;<a href="#8">2.6. 运行时常量池</a>  
 &emsp;&emsp;<a href="#9">2.7. HotSpot 的后台线程</a>  
-&emsp;&emsp;<a href="#10">2.8. 应用</a>  
-&emsp;<a href="#11">3. 垃圾收集器与内存分配策略</a>  
-&emsp;&emsp;<a href="#12">3.1. 判断对象是否已死的方法</a>  
-&emsp;&emsp;<a href="#13">3.2. 回收方法区</a>  
-&emsp;&emsp;<a href="#14">3.3. 垃圾收集算法</a>  
-&emsp;&emsp;&emsp;<a href="#15">3.3.1. 标记-清除算法</a>  
-&emsp;&emsp;&emsp;<a href="#16">3.3.2. 标记-复制算法</a>  
-&emsp;&emsp;&emsp;<a href="#17">3.3.3. 标记-整理算法</a>  
-&emsp;&emsp;<a href="#18">3.4. 新生代垃圾回收</a>  
-&emsp;&emsp;&emsp;<a href="#19">3.4.1. 相关问题</a>  
-&emsp;&emsp;<a href="#20">3.5. 经典的垃圾收集器</a>  
-&emsp;&emsp;&emsp;<a href="#21">3.5.1. Serial收集器</a>  
-&emsp;&emsp;&emsp;<a href="#22">3.5.2. Serial Old收集器</a>  
-&emsp;&emsp;&emsp;<a href="#23">3.5.3. ParNew收集器</a>  
-&emsp;&emsp;&emsp;<a href="#24">3.5.4. Parallel Scavenge 收集器</a>  
-&emsp;&emsp;&emsp;<a href="#25">3.5.5. Parallel Old收集器</a>  
-&emsp;&emsp;&emsp;<a href="#26">3.5.6. CMS(Concurrent Mark Sweep)收集器</a>  
-&emsp;&emsp;&emsp;<a href="#27">3.5.7. Garbage First 收集器</a>  
-&emsp;&emsp;&emsp;<a href="#28">3.5.8. CMS 与 G1 对比</a>  
-&emsp;&emsp;&emsp;<a href="#29">3.5.9. 其他的垃圾收集器</a>  
-&emsp;&emsp;&emsp;<a href="#30">3.5.10. 选用收集器的三个因素</a>  
-&emsp;<a href="#31">4. java虚拟机监控工具</a>  
-&emsp;&emsp;<a href="#32">4.1. jps</a>  
-&emsp;&emsp;<a href="#33">4.2. jstat</a>  
-&emsp;&emsp;<a href="#34">4.3. jinfo</a>  
-&emsp;&emsp;<a href="#35">4.4. jmap 和 jhat</a>  
-&emsp;&emsp;<a href="#36">4.5. jstack</a>  
-&emsp;&emsp;<a href="#37">4.6. jconsole</a>  
-&emsp;<a href="#38">5. 类文件</a>  
-&emsp;&emsp;<a href="#39">5.1. 类文件结构</a>  
-&emsp;&emsp;<a href="#40">5.2. 双亲委派模型</a>  
-&emsp;&emsp;&emsp;<a href="#41">5.2.1. 自定义类加载器</a>  
-&emsp;&emsp;&emsp;<a href="#42">5.2.2. 破坏双亲委派模型</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#43">5.2.2.1. JDBC破坏双亲委派模型</a>  
-&emsp;&emsp;<a href="#44">5.3. 类初始化的时机</a>  
-&emsp;&emsp;<a href="#45">5.4. 类的生命周期</a>  
-&emsp;&emsp;&emsp;<a href="#46">5.4.1. 加载</a>  
-&emsp;&emsp;&emsp;<a href="#47">5.4.2. 验证</a>  
-&emsp;&emsp;&emsp;<a href="#48">5.4.3. 准备</a>  
-&emsp;&emsp;&emsp;<a href="#49">5.4.4. 解析</a>  
-&emsp;&emsp;&emsp;<a href="#50">5.4.5. 初始化</a>  
-&emsp;&emsp;&emsp;<a href="#51">5.4.6. 卸载</a>  
-&emsp;<a href="#52">6. 对象创建及使用</a>  
-&emsp;&emsp;<a href="#53">6.1. 对象分配内存的方式</a>  
-&emsp;&emsp;<a href="#54">6.2. 对象内存分布</a>  
-&emsp;&emsp;<a href="#55">6.3. 对象的访问</a>  
-&emsp;&emsp;<a href="#56">6.4. 对象引用</a>  
-&emsp;<a href="#57">7. JDK编译期</a>  
-&emsp;&emsp;<a href="#58">7.1. 编译期做的工作</a>  
-&emsp;<a href="#59">8. 堆内存的设置要点</a>  
-&emsp;<a href="#60">9. CMS + ParNew收集器的流程梳理</a>  
-&emsp;&emsp;<a href="#61">9.1. young区域(年轻代)</a>  
-&emsp;&emsp;<a href="#62">9.2. old区域(老年代)</a>  
-&emsp;&emsp;&emsp;<a href="#63">9.2.1. CMS GC原因</a>  
-&emsp;&emsp;&emsp;<a href="#64">9.2.2. CMS GC 垃圾回收模式</a>  
-&emsp;&emsp;&emsp;<a href="#65">9.2.3. 其他老年代问题</a>  
-&emsp;&emsp;<a href="#66">9.3. 相关文章</a>  
-&emsp;<a href="#67">10. Java虚拟机内存调优</a>  
-&emsp;&emsp;<a href="#68">10.1. 基本概念重述</a>  
-&emsp;&emsp;&emsp;<a href="#69">10.1.1. 工具整理</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#70">10.1.1.1. 命令行终端</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#71">10.1.1.2. 可视化界面</a>  
-&emsp;&emsp;<a href="#72">10.2. GC 调优目的</a>  
-&emsp;&emsp;<a href="#73">10.3. GC 调优策略</a>  
-&emsp;&emsp;<a href="#74">10.4. 调优指标</a>  
-&emsp;&emsp;<a href="#75">10.5. 问题排查思路</a>  
-&emsp;&emsp;<a href="#76">10.6. 案例</a>  
-&emsp;&emsp;&emsp;<a href="#77">10.6.1. 美团技术案例（基于CMS JDK1.8）</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#78">10.6.1.1. 场景一：动态扩容引起的空间震荡</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#79">10.6.1.2. 场景二：显式 GC 的去与留 (System.gc)</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#80">10.6.1.3. 场景三：MetaSpace 区 OOM</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#81">10.6.1.4. 场景四：过早晋升 </a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#82">10.6.1.5. 场景五：CMS Old GC 频繁 </a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#83">10.6.1.6. 场景六：单次 CMS Old GC 耗时长</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#84">10.6.1.7. 场景七：内存碎片&收集器退化</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#85">10.6.1.8. 场景八：堆外内存 OOM</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#86">10.6.1.9. 场景九：JNI 引发的 GC 问题</a>  
-&emsp;&emsp;&emsp;<a href="#87">10.6.2. 不恰当的数据结构导致内存过大</a>  
-&emsp;&emsp;&emsp;<a href="#88">10.6.3. 堆外内存导致溢出错误</a>  
-&emsp;&emsp;&emsp;<a href="#89">10.6.4. 异步系统Socket连接</a>  
-&emsp;&emsp;&emsp;<a href="#90">10.6.5. Evosuite 自动生成单元测试</a>  
-&emsp;&emsp;&emsp;<a href="#91">10.6.6. 其他案例分析资料</a>  
-&emsp;&emsp;&emsp;<a href="#92">10.6.7. 其他建议</a>  
+&emsp;&emsp;<a href="#10">2.8. 内存区域溢出分析</a>  
+&emsp;&emsp;&emsp;<a href="#11">2.8.1. java堆溢出</a>  
+&emsp;&emsp;&emsp;<a href="#12">2.8.2. 虚拟机栈和本地方法栈溢出</a>  
+&emsp;&emsp;&emsp;<a href="#13">2.8.3. 方法区和运行时常量池溢出</a>  
+&emsp;&emsp;<a href="#14">2.9. 应用</a>  
+&emsp;<a href="#15">3. 垃圾收集器与内存分配策略</a>  
+&emsp;&emsp;<a href="#16">3.1. 判断对象是否已死的方法</a>  
+&emsp;&emsp;<a href="#17">3.2. 回收方法区</a>  
+&emsp;&emsp;<a href="#18">3.3. 垃圾收集算法</a>  
+&emsp;&emsp;&emsp;<a href="#19">3.3.1. 标记-清除算法</a>  
+&emsp;&emsp;&emsp;<a href="#20">3.3.2. 标记-复制算法</a>  
+&emsp;&emsp;&emsp;<a href="#21">3.3.3. 标记-整理算法</a>  
+&emsp;&emsp;<a href="#22">3.4. 新生代垃圾回收</a>  
+&emsp;&emsp;&emsp;<a href="#23">3.4.1. 相关问题</a>  
+&emsp;&emsp;<a href="#24">3.5. 经典的垃圾收集器</a>  
+&emsp;&emsp;&emsp;<a href="#25">3.5.1. Serial收集器</a>  
+&emsp;&emsp;&emsp;<a href="#26">3.5.2. Serial Old收集器</a>  
+&emsp;&emsp;&emsp;<a href="#27">3.5.3. ParNew收集器</a>  
+&emsp;&emsp;&emsp;<a href="#28">3.5.4. Parallel Scavenge 收集器</a>  
+&emsp;&emsp;&emsp;<a href="#29">3.5.5. Parallel Old收集器</a>  
+&emsp;&emsp;&emsp;<a href="#30">3.5.6. CMS(Concurrent Mark Sweep)收集器</a>  
+&emsp;&emsp;&emsp;<a href="#31">3.5.7. Garbage First 收集器</a>  
+&emsp;&emsp;&emsp;<a href="#32">3.5.8. CMS 与 G1 对比</a>  
+&emsp;&emsp;&emsp;<a href="#33">3.5.9. 其他的垃圾收集器</a>  
+&emsp;&emsp;&emsp;<a href="#34">3.5.10. 选用收集器的三个因素</a>  
+&emsp;<a href="#35">4. java虚拟机监控工具</a>  
+&emsp;&emsp;<a href="#36">4.1. jps</a>  
+&emsp;&emsp;<a href="#37">4.2. jstat</a>  
+&emsp;&emsp;<a href="#38">4.3. jinfo</a>  
+&emsp;&emsp;<a href="#39">4.4. jmap 和 jhat</a>  
+&emsp;&emsp;<a href="#40">4.5. jstack</a>  
+&emsp;&emsp;<a href="#41">4.6. jconsole</a>  
+&emsp;<a href="#42">5. 类文件</a>  
+&emsp;&emsp;<a href="#43">5.1. 类文件结构</a>  
+&emsp;&emsp;<a href="#44">5.2. 双亲委派模型</a>  
+&emsp;&emsp;&emsp;<a href="#45">5.2.1. 自定义类加载器</a>  
+&emsp;&emsp;&emsp;<a href="#46">5.2.2. 破坏双亲委派模型</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#47">5.2.2.1. JDBC破坏双亲委派模型</a>  
+&emsp;&emsp;<a href="#48">5.3. 类初始化的时机</a>  
+&emsp;&emsp;<a href="#49">5.4. 类的生命周期</a>  
+&emsp;&emsp;&emsp;<a href="#50">5.4.1. 加载</a>  
+&emsp;&emsp;&emsp;<a href="#51">5.4.2. 验证</a>  
+&emsp;&emsp;&emsp;<a href="#52">5.4.3. 准备</a>  
+&emsp;&emsp;&emsp;<a href="#53">5.4.4. 解析</a>  
+&emsp;&emsp;&emsp;<a href="#54">5.4.5. 初始化</a>  
+&emsp;&emsp;&emsp;<a href="#55">5.4.6. 卸载</a>  
+&emsp;<a href="#56">6. 对象创建及使用</a>  
+&emsp;&emsp;<a href="#57">6.1. 对象分配内存的方式</a>  
+&emsp;&emsp;<a href="#58">6.2. 对象内存分布</a>  
+&emsp;&emsp;<a href="#59">6.3. 对象的访问</a>  
+&emsp;&emsp;<a href="#60">6.4. 对象引用</a>  
+&emsp;&emsp;<a href="#61">6.5. 栈上分配</a>  
+&emsp;&emsp;&emsp;<a href="#62">6.5.1. 逃逸分析</a>  
+&emsp;&emsp;&emsp;<a href="#63">6.5.2. 标量替换</a>  
+&emsp;&emsp;&emsp;<a href="#64">6.5.3. 应用</a>  
+&emsp;&emsp;<a href="#65">6.6. TLAB</a>  
+&emsp;&emsp;<a href="#66">6.7. 对象内存分配流程</a>  
+&emsp;<a href="#67">7. JDK编译期</a>  
+&emsp;&emsp;<a href="#68">7.1. 编译期做的工作</a>  
+&emsp;<a href="#69">8. 堆内存的设置要点</a>  
+&emsp;<a href="#70">9. CMS + ParNew收集器的流程梳理</a>  
+&emsp;&emsp;<a href="#71">9.1. young区域(年轻代)</a>  
+&emsp;&emsp;<a href="#72">9.2. old区域(老年代)</a>  
+&emsp;&emsp;&emsp;<a href="#73">9.2.1. CMS GC原因</a>  
+&emsp;&emsp;&emsp;<a href="#74">9.2.2. CMS GC 垃圾回收模式</a>  
+&emsp;&emsp;&emsp;<a href="#75">9.2.3. 其他老年代问题</a>  
+&emsp;&emsp;<a href="#76">9.3. 相关文章</a>  
+&emsp;<a href="#77">10. Java虚拟机内存调优</a>  
+&emsp;&emsp;<a href="#78">10.1. 基本概念重述</a>  
+&emsp;&emsp;&emsp;<a href="#79">10.1.1. 工具整理</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#80">10.1.1.1. 命令行终端</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#81">10.1.1.2. 可视化界面</a>  
+&emsp;&emsp;<a href="#82">10.2. GC 调优目的</a>  
+&emsp;&emsp;<a href="#83">10.3. GC 调优策略</a>  
+&emsp;&emsp;<a href="#84">10.4. 调优指标</a>  
+&emsp;&emsp;<a href="#85">10.5. 问题排查思路</a>  
+&emsp;&emsp;<a href="#86">10.6. 案例</a>  
+&emsp;&emsp;&emsp;<a href="#87">10.6.1. 美团技术案例（基于CMS JDK1.8）</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#88">10.6.1.1. 场景一：动态扩容引起的空间震荡</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#89">10.6.1.2. 场景二：显式 GC 的去与留 (System.gc)</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#90">10.6.1.3. 场景三：MetaSpace 区 OOM</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#91">10.6.1.4. 场景四：过早晋升 </a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#92">10.6.1.5. 场景五：CMS Old GC 频繁 </a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#93">10.6.1.6. 场景六：单次 CMS Old GC 耗时长</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#94">10.6.1.7. 场景七：内存碎片&收集器退化</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#95">10.6.1.8. 场景八：堆外内存 OOM</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#96">10.6.1.9. 场景九：JNI 引发的 GC 问题</a>  
+&emsp;&emsp;&emsp;<a href="#97">10.6.2. 不恰当的数据结构导致内存过大</a>  
+&emsp;&emsp;&emsp;<a href="#98">10.6.3. 堆外内存导致溢出错误</a>  
+&emsp;&emsp;&emsp;<a href="#99">10.6.4. 异步系统Socket连接</a>  
+&emsp;&emsp;&emsp;<a href="#100">10.6.5. Evosuite 自动生成单元测试</a>  
+&emsp;&emsp;&emsp;<a href="#101">10.6.6. 其他案例分析资料</a>  
+&emsp;&emsp;&emsp;<a href="#102">10.6.7. 其他建议</a>  
 # <a name="0">JVM </a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 大部分参考周志明【深入理解Java虚拟机】
 - 附上官网文档搭配食用 [java8官网文档](https://docs.oracle.com/javase/specs/jvms/se8/html/index.html)
@@ -112,12 +122,12 @@
   
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/heap-detail.jpg)
 
-## <a name="2">虚拟机数据区</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+## <a name="2">虚拟机内存区域</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 ### <a name="3">程序计数器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
-- 定义：可以看作是当前线程所执行的字节码的行号指示器，为线程隔离的数据区。
-- java多线程切换时，每个线程独立的程序计数器，各条线程之间的计数器互不影响，独立存储，保证了线程切换后能恢复到正确的位置。
-- 唯一一个无OOM的区域
+定义：可以看作是当前线程所执行的字节码的行号指示器，为线程隔离的数据区。\
+java多线程切换时，每个线程独立的程序计数器，各条线程之间的计数器互不影响，独立存储，保证了线程切换后能恢复到正确的位置。
+> 唯一一个无OOM的区域
  
 ### <a name="4">Java虚拟机栈</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 定义：每个方法执行的时候，Java虚拟机都会同步的创建一个栈帧用于储存局部变量表、操作数栈、动态链接、方法出口等信息。每个方法被调用直至执行完毕的过程，就对应着一个栈帧在虚拟机栈中从入栈到出栈的过程。
@@ -125,6 +135,7 @@
 - 局部变量表存放了编译期可知的各种Java虚拟机基本数据类型（boolean、byte、char、short、int、float、long、double）、对象引用（reference类型）和returnAddress类型（指向一条字节码指令的地址）、
 - 在栈深度溢出或栈扩展失败时分别抛出StackOverFlowError和OutOfMemoryError的异常。 
  
+
 ### <a name="5">本地方法栈</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 定义：为虚拟机使用到的本地（Native）方法服务。
 - HotSpot直接把本方法栈和虚拟机栈合二为一。
@@ -136,10 +147,14 @@
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/hotstop-heap.jpg)
 
 ### <a name="7">方法区</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
-定义：是被各个线程共享的内存区域，它用于存储已被虚拟机加载的类型信息、常量、静态变量、即时编译器编译后的代码缓存等数据。
-> JDK8以前使用永久代来实现方法区（-XX:MaxPermSize 设置上限）\
+定义：是被各个线程共享的内存区域，它用于存储已被虚拟机加载的类型信息(类名、方法描述、字段描述)、常量、静态变量、即时编译器编译后的代码缓存等数据。
+> JDK8以前使用**永久代来实现方法区**\
 > 方法区类似于接口，永久代类似于实现类的关系。使用永久代的时候，可以设置内存上限，而且不同的虚拟机的实现不一样，因此更容易遇到内存溢出的问题。
- 
+
+`-XX:MaxMetaspaceSize`:设置元空间最大值，默认-1，不限制或者说仅受限于机器内存。
+`-XX:MetaspaceSize`: 指定元空间的初始空间大小，以字节为单位，达到该值就会触发垃圾收集进行类型卸载，同时收集器会根据收集结果对该值进行动态调整。
+``
+
 ### <a name="8">运行时常量池</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - 定义：运行时常量池是方法区的一部分。Class文件除类字段、方法、接口等描述信息外，还有一项信息是常量池表，用于存放编译期生成的各种字面量和符号引用，在类加载后存放到运行时常量池中。
 - 运行时常量池具备动态性，运行期间可以将新的常量放入池中，当无法申请到空间抛出OutOfMemoryError异常。 
@@ -147,13 +162,109 @@
 
 > 在 Java 7 之前，JVM 将 Java String Pool 放置在 永久代空间（java7方法区的实现）中，该空间具有固定大小——它不能在运行时扩展并且不符合垃圾收集条件。\
 在永久代（而不是堆）中使用字符串的风险是，如果我们创建太多字符串，我们可能会从 JVM 中得到 OutOfMemory 错误。\
-从 Java 7 开始，Java String Pool 存储在 Heap 空间中，由 JVM 进行垃圾回收。 这种方法的优点是降低了 OutOfMemory 错误的风险，因为未引用的字符串将从池中删除，从而释放内存。
+从 Java 7 开始，Java String Pool 存储在 **Heap 空间**中，由 JVM 进行垃圾回收。 这种方法的优点是降低了 OutOfMemory 错误的风险，因为未引用的字符串将从池中删除，从而释放内存。
 
 ### <a name="9">HotSpot 的后台线程</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/basic/hotspotThread.jpg)
 
 
-### <a name="10">应用</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="10">内存区域溢出分析</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+
+#### <a name="11">java堆溢出</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+```java
+// -Xms20m -Xmx20m -XX:+HeapDumpOnOutOfMemoryError
+public class HeapOOM {
+    static class OOMObject {
+
+    }
+
+    public static void main(String[] args) {
+        List<OOMObject> list = new ArrayList<>();
+        while (true) {
+            list.add(new OOMObject());
+        }
+    }
+}
+```
+#### <a name="12">虚拟机栈和本地方法栈溢出</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+虚拟机栈和本地方法栈的溢出有StackOverflowError和OutOfMemoryError
+
+导致StackOverflowError的两种行为
+1. `-Xss`参数减少栈内存容量，递归过程导致堆栈溢出
+2. 定义大量本地变量，导致堆栈溢出
+
+```java
+// -Xss128k
+public class JavaVMStackSOF {
+    private int stackLength = 1;
+
+    public void stackLeak() {
+        stackLength++;
+        stackLeak();
+    }
+
+    public static void main(String[] args) {
+        JavaVMStackSOF oom = new JavaVMStackSOF();
+        try {
+            oom.stackLeak();
+        } catch (Exception e) {
+            System.out.println("stack length:" + oom.stackLength);
+            throw e;
+        }
+    }
+}
+```
+```java
+public class JavaVMStackSOF {
+    private int stackLength = 1;
+
+    public void stackLeak() {
+        long unused1,unused2; // .... unused199
+    }
+
+    public static void main(String[] args) {
+        JavaVMStackSOF oom = new JavaVMStackSOF();
+        try {
+            oom.stackLeak();
+        } catch (Exception e) {
+            System.out.println("stack length:" + oom.stackLength);
+            throw e;
+        }
+    }
+}
+```
+
+内存溢出OutOfMemoryError的原因：因为创建一个线程的本地方法栈及虚拟机栈也是占用堆内存空间的，在内存有限的情况，创建一定数量的线程将导致内存溢出
+```java
+// -Xss2M  设置每个线程的堆栈大小
+public class JavaVMStackOOM {
+    private void dontStop() {
+
+    }
+
+    public void stackLeakByThread() {
+        while (true) {
+            Thread thread = new Thread(new Runnable() {
+                @Override
+                public void run() {
+                    dontStop();
+                }
+            });
+            thread.start();
+        }
+    }
+
+    public static void main(String[] args) {
+        JavaVMStackOOM oom = new JavaVMStackOOM();
+        oom.stackLeakByThread();
+    }
+}
+```
+
+#### <a name="13">方法区和运行时常量池溢出</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+
+
+### <a name="14">应用</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 ```java
 
 public class JHSDB_TestCase {
@@ -182,10 +293,10 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
 - instantObj对象存放在Eden Java堆中
 - localObj对象存放在Eden Java堆中
 
-## <a name="11">垃圾收集器与内存分配策略</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+## <a name="15">垃圾收集器与内存分配策略</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 程序计数器、虚拟机栈、本地方法栈3个区域随线程而生而灭，因此这几个区域的内存分配和回收都具备确定性，不需要过多考虑回收问题。
 
-### <a name="12">判断对象是否已死的方法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="16">判断对象是否已死的方法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 引用计数法：
 - 定义：在对象中添加一个引用计数器，有一个地方引用时，计数器值加一，引用失效时减一。
 - 优点：原理简单，判定效率也很高。
@@ -202,7 +313,7 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
      6. 所有被同步锁(synchronize关键字)持有的对象。
      7. 反映Java虚拟机内部情况的JMXBean、JVMTI中注册的回调、本地缓存代码等。
 
-### <a name="13">回收方法区</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="17">回收方法区</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 方法区的回收主要是两部分内容：废弃的常量和不再使用的类型。
 - 废弃的常量的例子：字符创常量进入到常量池中，但当前系统有没有任何一个字符串对象的值为“java”，则该常量就会被系统清理出常量池。
 - 不在使用的类，需同时满足一下三个条件：
@@ -210,21 +321,21 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
   - 加载该类的类加载器已经被回收。正常很难达成。如OSGi、JSP的重加载会产生。
   - 该类对应的java.lang.Class对象没有在任何地方被引用，无法在任何地方通过反射访问该类的方法。
   
-### <a name="14">垃圾收集算法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="18">垃圾收集算法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 弱分代假说：绝大多数对象都是朝生夕灭。\
 强分代假说：熬过越多次垃圾手机过程的对象就越难消亡。\
 跨代引用假说：存在于新生代的对象可能会引用老年代的对象。因此该假说说明的是，存在互相引用关系的对象，是应该倾向于同时生存或者同时死亡。
-- 解决方案，在新生代上建立一个全局的数据结构（记忆集），这个结构吧老年代划分成若干小块，表示出老年代的哪一块内存会存在跨代引用。之后发生Minor GC时，只有包含跨代引用的小块内存才会加入到GC Root的扫描.
+- 解决方案，在新生代上建立一个全局的数据结构（记忆集），这个结构把老年代划分成若干小块，表示出老年代的哪一块内存会存在跨代引用。之后发生Minor GC时，只有包含跨代引用的小块内存才会加入到GC Root的扫描.
 
 
-#### <a name="15">标记-清除算法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="19">标记-清除算法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 定义：算法分为两个阶段，一个阶段就是标记出所有需要回收的对象，在标记完成后，统一回收掉所有标记的对象，当然也可以反过来标记存活的对象，统一回收未标记对象。
 
 缺点：
 1. 执行效率不稳定，如果java堆中包含大量对象，并且其中大部分是需要回收的，当对象的数量增长，标记跟清除的执行效率都会越来越低。
 2. 内存碎片化问题，标记跟清除之后会产生大量不连续的内存碎片，空间碎片太多可能导致后续程序在分配大对象的时候不得不触发另一次垃圾收集动作。
 
-#### <a name="16">标记-复制算法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="20">标记-复制算法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 定义:为了解决标记算法面对大量可回收对象时执行效率低及空间碎片化的问题，该算法将内存分为两个大小相等的空间，每次只使用其中一块。当一块的内存使用完了，就将还存货的对象复制到另一块上去，然后把已使用过的空间一次性清理干净。
 
 缺点：
@@ -232,7 +343,7 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
 2. 将可用的对象内存缩小为原来的一半，空间浪费未免太多了。
 3. 老年代一般不直接使用该算法，因为老年代对象存货率较高，复制开销太大。针对100%都存活的极端情况，
    
-#### <a name="17">标记-整理算法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="21">标记-整理算法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 定义：与标记-清除算法本质区别为，移动存活的对象。而移动回收后存活的对象是一项优缺点并存的风险决策。
 
 移动对象的优缺点:
@@ -241,7 +352,7 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
 - 综合的解决方案，平常都是用标记-清除算法，直到空间碎片化已经影响到对象分配，再使用标记-整理算法。
 
 
-### <a name="18">新生代垃圾回收</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="22">新生代垃圾回收</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 1. eden、 survivor From 复制到 survivor To，年龄+1。
 > 首先，把 Eden 和 survivor From 区域中存活的对象复制到 survivor To 区域（如果有对象的年龄以及达到了老年的标准，则赋值到老年代区），同时把这些对象的年龄+1（如果 ServicorTo 不够位置了就放到老年区）；
 2. 清空 eden、 survivor From。
@@ -251,7 +362,7 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/basic/edenGc.jpg)
 
 
-#### <a name="19">相关问题</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="23">相关问题</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 为什么需要Survivor区域？
 > 防止对象过早进入Old，导致Old频繁Full GC。Survivor具有预筛选保证，只有对象到一定岁数才会送往老年代，Survivor区可以减少被送到老年代的对象，进而减少Full GC发生。
 
@@ -263,11 +374,11 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
 
 
 
-### <a name="20">经典的垃圾收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="24">经典的垃圾收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/garbage-collector.jpg)
 
-#### <a name="21">Serial收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="25">Serial收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - 定义:一个单线程的垃圾收集器，在垃圾收集时必须暂停其他所有工作线程，直到收集结束。
 - 对于新生代采取复制算法暂停所有线程，对于老年代使用标记-整理算法同样暂停所有线程。
 - 缺点：需要暂停用户线程。
@@ -275,13 +386,13 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
   1. 简单高效、对于内存资源受限的环境，它是所有收集器里额外内存消耗最小的。
   2. 单核处理器或者处理器核心较少的环境来说，Serial由于没有线程交互的开销，可以专心做垃圾回收自然可以获得最高的单线程收集效率。
 
-#### <a name="22">Serial Old收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="26">Serial Old收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - 定义：使用标记-整理算法。
 - 用途：可以Parallel Scavenge收集器搭配使用，另一种是作为CMS收集器发生失败的后背方案。
   
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/serial-1.jpg)
 
-#### <a name="23">ParNew收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="27">ParNew收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - 定义：Serial收集器的多线程并行版本。
 - 唯一的优点仅有ParNew和Serial可以和CMS收集器配合工作，以后ParNew将会合并入CMS，成为其处理新生代的组成部分。
 - 随着可以被使用的处理核心增加，ParNew对于垃圾收集时系统可以高效利用，默认开启的收集线程数和处理器核心数量相同。
@@ -290,7 +401,7 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
 
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/parNew-1.jpg)
 
-#### <a name="24">Parallel Scavenge 收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="28">Parallel Scavenge 收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 定义：新生代收集器，同样基于标记-复制算法，能够并行收集的多线程收集器。特点是达到一个可控制的吞吐量。
 `吞吐量= 运行客户代码时间/(运行用户代码时间+运行垃圾收集时间)`
 
@@ -302,13 +413,13 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
     - 设置成19，那允许垃圾回收时间为总时间的5%(1/(1+19))，默认值为99,允许最大1%的时间进行垃圾回收。
 - -XX:+UseAdaptiveSizePolicy: 开启自适应的调整策略。
 
-#### <a name="25">Parallel Old收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="29">Parallel Old收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 定义：Parallel Scavenge收集器的老年版本，支持多线程并发收集，基于标记-整理算法。
 - 与Parallel Scavenge搭配作为“吞吐量优先”的收集器搭配组合
 
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/parallel.jpg)
 
-#### <a name="26">CMS(Concurrent Mark Sweep)收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="30">CMS(Concurrent Mark Sweep)收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 定义：一种以获取最短回收停顿时间为目标的收集器，工作于老年代。
 
 运行过程解析：基于标记-清除算法实现，具体步骤如下，
@@ -329,7 +440,7 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
 
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/cms-1.jpg)
 
-#### <a name="27">Garbage First 收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="31">Garbage First 收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 定义：面向服务端应用的垃圾收集器，基于Region的堆内存布局进行垃圾收集，每一个Region都可以根据需要扮演新生代的Eden空间、Survivor空间和老年代空间。Region中还有一类特殊的Humongous区域，专门用来存储大对象，G1认为只要超过了一个Region一半的对象即可认为是大对象。对于Humongous区域，正常当做老年代一部分。
 
 - 参数Region的大小可通过-XX:G1HeapRegionSize设定，取值范围为1M~32M，为2的N次幂。
@@ -355,7 +466,7 @@ G1整体是基于标记-整理算法实现的收集器，但从局部优势基�
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/g1-memory.jpg)
 
 [G1官网说明](https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/g1_gc.html)
-#### <a name="28">CMS 与 G1 对比</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="32">CMS 与 G1 对比</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 G1计划作为并发标记扫描收集器（CMS）的长期替代品。
 1. 垃圾回收理念不同：CMS基于分代收集理念设计。G1基于分区收集理念设计。
 2. 整理：G1在GC的时候都会做垃圾的碎片整理，而CMS收集器只在Full GC STW时才会做内存压缩整理。
@@ -368,18 +479,18 @@ G1计划作为并发标记扫描收集器（CMS）的长期替代品。
 - G1针对具有大内存的多处理器机器，因为其`Remembered Sets`的记忆集的设计，需要占用更多内存。
 
 [what’s new in Java 8](https://www.overops.com/blog/garbage-collectors-serial-vs-parallel-vs-cms-vs-the-g1-and-whats-new-in-java-8/)
-#### <a name="29">其他的垃圾收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="33">其他的垃圾收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - Shenandoah 收集器：仅存在OpenJdk，区别G1的特点为支持并发整理，使用转发指针和读屏障实现。
 - ZGC 收集器：Region具有动态性，并分为大中小三个Region，使用染色指针技术实现并发整理算法。
 - Epsilon收集器：无操作收集器。
 
-#### <a name="30">选用收集器的三个因素</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="34">选用收集器的三个因素</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 1. 如果是数据分析、科学计算类任务，目标是尽快可以算出结果，那么吞吐量为主要关注点。如果为SLA应用，停顿时间直接影响任务质量，严重甚至会导致事务超时，那么延迟是主要的关注点。
 2. 使用运行的基础设施的指标。
 3. JDK对应的版本。
 
-## <a name="31">java虚拟机监控工具</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
-### <a name="32">jps</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+## <a name="35">java虚拟机监控工具</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="36">jps</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 jps (JVM Process Status）: 类似 UNIX 的 ps 命令。用户查看所有 Java 进程的启动类、传入参数和 Java 虚拟机参数等信息；
 ```
 [root@iZuf6ee30yhz3x9bqf63clZ apache-tomcat-8.5.31]# jps -l
@@ -392,7 +503,7 @@ jps (JVM Process Status）: 类似 UNIX 的 ps 命令。用户查看所有 Java 
 3828 Jps -Dapplication.home=/usr/java/jdk1.8.0_221-amd64 -Xms8m
 2903 Bootstrap -Djava.util.logging.config.file=/usr/local/apache-tomcat-8.5.31/conf/logging.properties -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager -Djdk.tls.ephemeralDHKeySize=2048 -Djava.protocol.handler.pkgs=org.apache.catalina.webresources -Dorg.apache.catalina.security.SecurityListener.UMASK=0027 -Dignore.endorsed.dirs= -Dcatalina.base=/usr/local/apache-tomcat-8.5.31 -Dcatalina.home=/usr/local/apache-tomcat-8.5.31 -Djava.io.tmpdir=/usr/local/apache-tomcat-8.5.31/temp
 ```
-### <a name="33">jstat</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="37">jstat</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 jstat（ JVM Statistics Monitoring Tool）: 用于收集 HotSpot 虚拟机各方面的运行数据;
 
 jstat -gc -h3 31736 1000 10表示分析进程 id 为 31736 的 gc 情况，每隔 1000ms 打印一次记录，打印 10 次停止，每 3 行后打印指标头部。
@@ -409,7 +520,7 @@ jstat -gc -h3 31736 1000 10表示分析进程 id 为 31736 的 gc 情况，每�
 ```
 
 - 相关资料：https://www.xttblog.com/?p=3175
-### <a name="34">jinfo</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="38">jinfo</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 jinfo (Configuration Info for Java) : Configuration Info forJava,显示虚拟机配置信息;
  ```
 C:\Users\SnailClimb>jinfo  -flag MaxHeapSize 17340
@@ -417,7 +528,7 @@ C:\Users\SnailClimb>jinfo  -flag MaxHeapSize 17340
 C:\Users\SnailClimb>jinfo  -flag PrintGC 17340
 -XX:-PrintGC
 ```
-### <a name="35">jmap 和 jhat</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="39">jmap 和 jhat</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 jmap (Memory Map for Java) :生成堆转储快照;
 ```
 [root@iZuf6ee30yhz3x9bqf63clZ apache-tomcat-8.5.31]# jmap -dump:format=b,file=elasticfoam.bin 2903
@@ -439,7 +550,7 @@ Snapshot resolved.
 Started HTTP server on port 7000
 Server is ready.
 ```
-### <a name="36">jstack</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="40">jstack</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 jstack (Stack Trace for Java):生成虚拟机当前时刻的线程快照，线程快照就是当前虚拟机内每一条线程正在执行的方法堆栈的集合。
 
 ```
@@ -476,9 +587,9 @@ top -Hp xxx（PID）  // 查看进程具体的线程ID cup情况
 jstack -l pid > filename // 输出当前快照
 cat filename| grep '线程ID（16进制）' -C 8     // 查找匹配线程，-C 查看前后多少行数据
 ```
-### <a name="37">jconsole</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="41">jconsole</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 JConsole:Java 监视与管理控制台，很强大，可以检测死锁，查看堆的内存释放情况。
-- 如果需要使用 JConsole 连接远程进程，可以在远程 Java 程序启动时加上下面这些参数:
+> 如果需要使用 JConsole 连接远程进程，可以在远程 Java 程序启动时加上下面这些参数:
 ```
 -Djava.rmi.server.hostname=外网访问 ip 地址 
 -Dcom.sun.management.jmxremote.port=60001   //监控的端口号
@@ -486,15 +597,16 @@ JConsole:Java 监视与管理控制台，很强大，可以检测死锁，查看
 -Dcom.sun.management.jmxremote.ssl=false
 ```
 
-## <a name="38">类文件</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+## <a name="42">类文件</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
-### <a name="39">类文件结构</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
--  方法体出现ACC_SYNCHRONIZED 标识，该标识指明了该方法是一个同步方法，JVM 通过该 ACC_SYNCHRONIZED 访问标志来辨别一个方法是否声明为同步方法，从而执行相应的同步调用。
+### <a name="43">类文件结构</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+方法体出现ACC_SYNCHRONIZED 标识，该标识指明了该方法是一个同步方法，JVM 通过该 ACC_SYNCHRONIZED 访问标志来辨别一个方法是否声明为同步方法，从而执行相应的同步调用。
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/basic/synchronizeMethod.jpg)
-- 方法体对应的访问范围
+
+方法体对应的访问范围
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/basic/classArea.jpg)
 
-### <a name="40">双亲委派模型</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="44">双亲委派模型</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 站在虚拟机角度，只存在两种不同的类加载器：
 1. 启动类加载器BootStrap ClassLoader，由虚拟机实现，是虚拟机自身一部分。
 2. 其他所有的类加载器，由Java语言实现，独立于虚拟机之外，都是继承自抽象类java.lang.ClassLoader。
@@ -552,7 +664,7 @@ java相关的三层类加载器
     }
 ```
 
-#### <a name="41">自定义类加载器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="45">自定义类加载器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 1. 加载非classpath下的类，从非标准的来源加载代码
 2. 加载加密过的类文件，使用秘钥进行解密。
 3. 热部署，简单粗暴的方法是自定义类加载器，加载目录外的类对象。使用定时任务或者触发起的方法，每次创建新的类加载器。
@@ -588,10 +700,10 @@ public class MyClassLoader extends ClassLoader {
 }
 ```
 
-#### <a name="42">破坏双亲委派模型</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="46">破坏双亲委派模型</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 破坏双亲委派模型，就是要实现自己的ClassLoader重写loadClass，在方法中重写自己加载的逻辑。这样类加载过程中就不会通过委派父类加载的方式进行加载数据。
 
-##### <a name="43">JDBC破坏双亲委派模型</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="47">JDBC破坏双亲委派模型</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 不破坏双亲委派模型的情况（不使用JNDI服务）
 ```
 // 1.加载数据访问驱动
@@ -628,7 +740,7 @@ private static Connection getConnection(
     }
 ```
 
-### <a name="44">类初始化的时机</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="48">类初始化的时机</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 虚拟机严格规范了有且只有6种情况下，必须对类进行初始化(只有主动去使用类才会初始化类)：
 1. 当遇到 new、getstatic、putstatic或invokestatic 这4条直接码指令时，比如 new 一个类，读取一个静态字段(未被 final 修饰)、或调用一个类的静态方法时。
@@ -643,18 +755,18 @@ private static Connection getConnection(
 6. 当一个接口中定义了JDK8新加入的默认方法（被default关键字修饰的接口方法）时，如果有这个接口的实现类发生了初始化，那该接口要在其之前被初始化。
 
 
-### <a name="45">类的生命周期</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="49">类的生命周期</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 类的生命周期： 加载、连接[验证、准备、解析]、初始化、使用、卸载。
-#### <a name="46">加载</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="50">加载</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 类加载过程的第一步，主要完成下面3件事情：
 1. 通过全类名获取定义此类的二进制字节流
 2. 将字节流所代表的静态存储结构转换为方法区的运行时数据结构
 3. 在内存中生成一个代表该类的 Class 对象,作为方法区这些数据的访问入口
 
-#### <a name="47">验证</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="51">验证</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 验证的范围：文件格式、元数据、字节码、符号引用验证
 
-#### <a name="48">准备</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="52">准备</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 准备阶段是正式为类变量(即静态变量)分配内存并设置类变量初始值的阶段，jdk8中这些内存都将在java堆中分配。对于该阶段有以下几点需要注意：
 - 进行内存分配的仅包括类变量（static），而不包括实例变量
 - 这里所设置的初始值"通常情况"下是数据类型默认的零值（如0、0L、null、false等）
@@ -668,7 +780,7 @@ public static final int v = 8080;
 
 ```
 
-#### <a name="49">解析</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="53">解析</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 解析阶段是虚拟机将常量池内的符号引用替换为直接引用的过程。解析动作主要针对类或接口、字段、类方法、接口方法、方法类型、方法句柄和调用限定符7类符号引用进行。
 
 
@@ -678,13 +790,13 @@ public static final int v = 8080;
 3. 同上在类C的父类查找直接引用。
 4. 上述简述了类的查找，具体细节见书本。返回直接引用后，会验证方法的访问权限，即`private、protected、public`，如果发现不具备方法的访问级别，抛出`IllegalAccessError`异常。
 
-#### <a name="50">初始化</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="54">初始化</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 类的初始化阶段是类加载过程的最后一个步骤，这个阶段Java虚拟机才开始真正执行类中编写的java程序，将主导权移交给应用程序。
 
 在准备阶段已经赋初始化零值的变量，在初始化阶段，会根据程序去初始化类变量和其他资源。\
 初始化阶段就是执行类构造器`<clinit>()`方法的过程。该方法是由编译器收集类中的所有类变量的赋值动作和静态语句块（static{}块）中的语句合并产生的。
 
-#### <a name="51">卸载</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="55">卸载</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 卸载类即该类的Class对象被GC。
 
 卸载类需要满足3个要求:
@@ -693,7 +805,7 @@ public static final int v = 8080;
 - 该类的类加载器的实例已被GC
 
 
-## <a name="52">对象创建及使用</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+## <a name="56">对象创建及使用</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/basic/objcreate.jpg)
 
@@ -704,17 +816,17 @@ public static final int v = 8080;
 4. 设置对象头：进行对象的必要设置如那个类的示例、hashcode、GC分代年龄等信息，这些信息存放在对象头中。
 5. 上述工作完成之后，java开始调用对象的构造函数。
 
-### <a name="53">对象分配内存的方式</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="57">对象分配内存的方式</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - 规整空间：指针碰撞，整理过内存用一个指针标记内存使用过的范围，后序分配内存只需要移动指针，仅把指针向空闲空间移动一段与对象大小相等的距离。
-- 碎片空间：空闲链表(free list)，通过额外的维护的列表存储记录空闲的地址，将随机 IO 变为顺序 IO，但带来了额外的空间消耗。
+- 碎片空间：空闲链表(free list)，通过额外的维护的列表存储记录空闲的地址，将随机IO变为顺序IO，但带来了额外的空间消耗。
+> 使用Serial、ParNew等带压缩过程的垃圾回收器，使用指针分配算法。而CMS这种基于清除的算法理论上使用空闲链表的方式分配。
+
+对象分配内存并发控制(**内存分配并发解决方案**)：
+- CAS+失败重试
 - 本地线程分配缓冲(Thread Local Allocation Buffer,TLAB) ，每个线程在Java堆中预先分配一小块内存，基于 CAS 的独享线程（Mutator Threads）可以优先将对象分配在 Eden 中的一块内存，因为是 Java 线程独享的内存区没有锁竞争，所以分配速度更快，每个 TLAB 都是一个线程独享的。
 
-**内存分配并发解决方案**
-- CAS+失败重试
-- TLAB(Thread local Allocation Buffer) ，即线程预先在堆中分配一块内存。
 
-
-### <a name="54">对象内存分布</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="58">对象内存分布</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/object-head.jpg)
 对象在堆内存中的存储布局可以分为三部分：对象头、实例数据（对象有效信息）和对齐填充（仅起占位符作用）\
 
@@ -722,14 +834,13 @@ Hotspot的对象头包括两部分信息：
 1. 第一部分：存储对象自身的运行数据，如HashCode、GC分代年龄、锁状态标志、线程持有的锁、偏向线程ID等。
 2. 第二部分：类型指针，即对象指向它的类型愿数据的指针。
 
-### <a name="55">对象的访问</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="59">对象的访问</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 定义：java程序会通过栈上的reference数据来操作堆上的具体对象。具体的对象访问方式由虚拟机决定，主要有两种使用句柄和直接指针两种。
 - 使用句柄访问的话，java堆会划分一块内存作为句柄池。引用会指向句柄，而句柄中分为两块指针，一个是指向对象实例的指针，一个是指向对象类型数据的指针(指向方法区)。好处为整理内存是只需要整理实例的指针。
 - 直接指针访问，引用直接指向堆中的对象实例，而对象实例中包含数据的类型数据的指针(指向方法区)，好处为减少了指向实例的时间定为开销。
+> HotSpot虚拟机主要使用第二种方式进行访问。
 
-HotSpot虚拟机主要使用第二种方式进行访问。
-
-### <a name="56">对象引用</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="60">对象引用</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - 强引用(Strongly Reference): Object obj = new Object()。关系存在虚拟机就不会回收。
 - 软引用(Soft Reference)：用来描述一些还有用但非必须的对象。在系统要发生内存溢出会收集软引用对象，若回收完成仍内存不足，才抛出内存遗传。软引用可用于实现内存敏感缓存，其中内存管理是一个非常重要的因素。
 - 弱引用(Weak Reference)：弱引用关联的对象只能生存到下一次垃圾收集发生为止。
@@ -805,9 +916,101 @@ class LargeObjectFinalizer extends PhantomReference<Object> {
     }
 }
 ```
-## <a name="57">JDK编译期</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
-### <a name="58">编译期做的工作</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+
+### <a name="61">栈上分配</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+栈上分配是Java虚拟机的一项优化技术，基本思想是对于那些线程私有的对象(指不能被其他线程访问到的对象)，可以把他们打散分配在栈上，而不是分配在堆上。
+> 分配在对象上的好处是可以在函数调用结束后自行销毁，而不需要垃圾回收器的介入，从而提高系统的性能
+
+#### <a name="62">逃逸分析</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+逃逸分析是编译语言中的一种优化分析，而不是一种优化的手段。通过对象的作用范围的分析，为其他优化手段提供分析数据从而进行优化。
+> 目的是判断对象的作用域是否可能逃逸出函数体
+
+对象逃逸的三种类型：
+1. `GlobalEscape`: 对象逃逸出方法或线程，如静态对象、对象作为方法的返回值、是已确认为逃逸对象的对象字段等
+2. `ArgEscape`: 对象作为方法调用的参数，传递引用给方法，但是在调用过程中不是全局逃逸对象。
+3. `NoEscape`: 可以标量替换的对象。
+> 标量即不可被进一步分解的量，而JAVA的基本数据类型就是标量（如：int，long等基本数据类型以及reference类型等）
+
+参考文献：\
+[逃逸分析官网解答](https://docs.oracle.com/javase/7/docs/technotes/guides/vm/performance-enhancements-7.html#escapeAnalysis)
+
+#### <a name="63">标量替换</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+标量可以理解成一种不可分解的变量，如java内部的基本数据类型、引用类型等。 与之对应的聚合量是可以被拆解的，如对象。
+
+当通过逃逸分析一个对象只会作用于方法内部，虚拟机可以通过使用标量替换来进行优化。
+
+#### <a name="64">应用</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+- `-XX:+DoEscapeAnalysis`：用于开启逃逸分析
+- `-XX:+EliminateAllocations`：用于开启标量替换，允许将对象打散分配在栈上
+```java
+/**
+ * -server -Xmx10m -Xms10m -XX:+DoEscapeAnalysis -XX:+PrintGC -XX:-UseTLAB -XX:+EliminateAllocations
+ */
+public class OnStackTest {
+
+    public static class User {
+        public int id = 0;
+        public String name = "";
+    }
+
+    public static void alloc() {
+        User u = new User();
+        u.id = 5;
+        u.name = "geym";
+    }
+
+    public static void main(String[] args) {
+        long b = System.currentTimeMillis();
+        for (int i = 0; i < 100000000; i++) {
+            alloc();
+        }
+        long e = System.currentTimeMillis();
+        System.out.println(e-b);
+    }
+}
+```
+如果关闭逃逸分析或者标量替换的任何一个，再次执行程序就会看到大量的GC日志，说明栈上分配依赖逃逸分析和标亮替换的实现。
+
+### <a name="65">TLAB</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+TLAB，全称Thread Local Allocation Buffer, 即：线程本地分配缓存。这是一块线程专用的内存分配区域。TLAB占用的是eden区的空间。在TLAB启用的情况下（默认开启），JVM会为每一个线程分配一块TLAB区域。
+
+
+为什么需要TLAB？
+这是为了加速对象的分配。由于对象一般分配在堆上，而堆是线程共用的，因此可能会有多个线程在堆上申请空间，而每一次的对象分配都必须**线程同步**，会使分配的效率下降。考虑到对象分配几乎是Java中最常用的操作，因此JVM使用了TLAB这样的线程专有区域来避免多线程冲突，提高对象分配的效率。
+
+局限性： TLAB空间一般不会太大（占用eden区），所以大对象无法进行TLAB分配，只能直接分配到堆上。
+
+
+分配策略：\
+一个100KB的TLAB区域，如果已经使用了80KB，当需要分配一个30KB的对象时，TLAB是如何分配的呢？
+此时，虚拟机有两种选择：第一，废弃当前的TLAB（会浪费20KB的空间）；第二，将这个30KB的对象直接分配到堆上，保留当前TLAB（当有小于20KB的对象请求TLAB分配时可以直接使用该TLAB区域）。
+JVM选择的策略是：在虚拟机内部维护一个叫refill_waste的值，当请求对象大于refill_waste时，会选择在堆中分配，反之，若小于refill_waste值，则会废弃当前TLAB，新建TLAB来分配新对象。
+> 【默认情况下，TLAB和refill_waste都是会在运行时不断调整的，使系统的运行状态达到最优。】
+
+|  参数   | 作用  | 备注 |
+|  ----  | ----  |----  |
+| -XX:+UseTLAB	| 启用TLAB	| 默认启用 | 
+| -XX:TLABRefillWasteFraction	| 设置允许空间浪费的比例	| 默认值：64，即：使用1/64的TLAB空间大小作为refill_waste值 | 
+| -XX:-ResizeTLAB	| 禁止系统自动调整TLAB大小	 |
+| -XX:TLABSize | 	指定TLAB大小	| 单位：B |
+
+### <a name="66">对象内存分配流程</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+java对象分配流程
+1. 首先运行栈上分配。编译器通过逃逸分析及标量替换，决定对象应该分配在栈上还是堆中。如果逃逸分析及标量替换其中一个未启用，则直接分配在堆中。如果决定分配在堆中，那么执行步骤2
+2. 进行TLAB分配。如果TLAB的空间`TALB_TOP+SIZE <= TLAB_END`，对象可以直接分配在TLAB中，那么`TLAB_TOP`加上对象`SIZE`进行位置移动。若不能执行步骤3
+3. 重新申请一块TALB，并尝试存储对象。若对象过大仍无法存储在TLAB中，执行步骤4
+4. 判断是否满足进入老年代的条件(`PretenureSizeThreshold`参数)，若满足直接进入老年代，不满足进行新声代分配
+5. 将对象存储在新声代`Eden`中，`EDEN_TOP`指针移位。若新声代无法存储对象，执行`Young GC`，并尝试重新分配对象。
+6. `Young GC` 后重新分配对象，若仍然无法分配。对象直接进入老年代。
+
+
+- [JVM About Object Distribution In Pile, Stack, TLAB](https://programmerall.com/article/46551700936/)
+- [JVM之对象分配：栈上分配 & TLAB分配](https://www.cnblogs.com/BlueStarWei/p/9358757.html)
+
+## <a name="67">JDK编译期</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+
+### <a name="68">编译期做的工作</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 1. 默认构造器： 经过编译的代码,可以看到在编译阶段，如果我们没有添加构造器。那么Java编译器会为我们添加一个无参构造方法。
 2. 自动拆装箱
@@ -823,7 +1026,7 @@ class LargeObjectFinalizer extends PhantomReference<Object> {
 
 相关资料： [Java编译期处理](https://blog.csdn.net/gyhdxwang/article/details/104396476)
 
-## <a name="59">堆内存的设置要点</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+## <a name="69">堆内存的设置要点</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 1. 新生代的内存大小设置建议：Sun官方推荐配置为整个堆的3/8。
 2. 服务器的内存需要预留一部分给永久代、线程栈及NIO
 
@@ -870,9 +1073,9 @@ java -Xmx3550m -Xms3550m -Xmn2g -Xss128k -XX:ParallelGCThreads=20 -XX:+UseConcMa
 
 相关文章：[看完你还敢说你懂JVM吗？](https://zhuanlan.zhihu.com/p/61049063?utm_source=wechat_session)
 
-## <a name="60">CMS + ParNew收集器的流程梳理</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+## <a name="70">CMS + ParNew收集器的流程梳理</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
-### <a name="61">young区域(年轻代)</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="71">young区域(年轻代)</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 1. 对象首先分配到Eden，分配满了触发Young Gc(Minor Gc)，基于复制交换算法，晋升对象年龄+1。
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/basic/edenGc.jpg)
 2. 年龄到达老年代门槛的晋升老年代。
@@ -888,8 +1091,8 @@ java -Xmx3550m -Xms3550m -Xmn2g -Xss128k -XX:ParallelGCThreads=20 -XX:+UseConcMa
     > 在发生 Minor GC 之前，虚拟机必须先检查老年代最大可用的连续空间是否大于新生代所有对象总空间，如果这个条件成立，那这一次 Minor GC 可以确保是安全的。如果不成立，则虚拟机会先查看 - XX:HandlePromotionFailure 参数的设置值是否允许担保失败 (Handle Promotion Failure)；如果允许，那会继续检查老年代最大可用的连续空间是否大于历次晋升到老年代对象的平均大小，如果大于，将尝试进行一次 Minor GC，尽管这次 Minor GC 是有风险的；如果小于，或者-XX: HandlePromotionFailure设置不允许冒险，那这时就要改为进行一次 Full GC。
 
 
-### <a name="62">old区域(老年代)</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
-#### <a name="63">CMS GC原因</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="72">old区域(老年代)</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="73">CMS GC原因</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 触发 CMS GC有：
 1. Old 区达到回收阈值
 2. MetaSpace 空间不足
@@ -899,7 +1102,7 @@ java -Xmx3550m -Xms3550m -Xmn2g -Xss128k -XX:ParallelGCThreads=20 -XX:+UseConcMa
 6. 显式调用System.gc
 7. 并发模式失败(浮动垃圾导致)
 
-#### <a name="64">CMS GC 垃圾回收模式</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="74">CMS GC 垃圾回收模式</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 CMS GC 的垃圾回收共分为 Background 和 Foreground 两种模式，
 - Background： 正常的CMS收集过程，初始标记、并发标记、重新标记、标记清除
 - Foreground： 会进行一次压缩式 GC，使用 MSC（Mark-Sweep-Compact）做 Full GC。收集的范围是 Java 堆的 Young 区和 Old 区以及 MetaSpace，会带来非常长的 STW。
@@ -915,37 +1118,39 @@ CMS 在Background回收的过程中，STW 的阶段主要是 Init Mark 和 Final
 - 带压缩动作的算法，称为 MSC，上面我们介绍过，使用标记-清理-压缩，单线程全暂停的方式，对整个堆进行垃圾收集，也就是真正意义上的 Full GC，暂停时间要长于普通 CMS。
 - 不带压缩动作的算法，收集 Old 区，和普通的 CMS 算法比较相似，暂停时间相对 MSC 算法短一些。
 
-#### <a name="65">其他老年代问题</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="75">其他老年代问题</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
  CMS 无法处理浮动垃圾（Floating Garbage）。CMS 的并发清理阶段，应用还在运行，因此不断有新的垃圾产生，而这些垃圾不在这次清理标记的范畴里，无法在本次 GC 被清除掉，这些就是浮动垃圾，除此之外在 Remark 之前那些断开引用脱离了读写屏障控制的对象也算浮动垃圾。
 
-### <a name="66">相关文章</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="76">相关文章</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 [图解垃圾回收](https://www.cnblogs.com/hynblogs/p/12292345.html)
 
-## <a name="67">Java虚拟机内存调优</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+## <a name="77">Java虚拟机内存调优</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+jdk1.8前的参数设置
  ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/basic/jvmParameter.jpg)
  ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/basic/jvmGCType.jpg)
 
 
-### <a name="68">基本概念重述</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
-> 跨代引用解决方案
+### <a name="78">基本概念重述</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+
+跨代引用解决方案
 
 Card Table：中文翻译为卡表，主要是用来标记卡页的状态，每个卡表项对应一个卡页。当卡页中一个对象引用有写操作时，写屏障将会标记对象所在的卡表状态改为 dirty，卡表的本质是用来解决跨代引用的问题。
 
-> 内存分配
+内存分配
 1. **TLAB**：Thread Local Allocation Buffer 的简写，基于 CAS 的独享线程（Mutator Threads）可以优先将对象分配在 Eden 中的一块内存，因为是 Java 线程独享的内存区没有锁竞争，所以分配速度更快，每个 TLAB 都是一个线程独享的。
 2. CAS+失败重试
 
 Mutator：生产垃圾的角色，也就是我们的应用程序，垃圾制造者，通过 Allocator 进行 allocate 和 free。
 
-#### <a name="69">工具整理</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="79">工具整理</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
-##### <a name="70">命令行终端</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="80">命令行终端</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 标准终端类：jps、jinfo、jstat、jstack、jmap
 
 功能整合类：jcmd、vjtools、arthas、greys
 
-##### <a name="71">可视化界面</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="81">可视化界面</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 简易：JConsole、JVisualvm、HA、GCHisto、GCViewer
 
@@ -954,10 +1159,10 @@ Mutator：生产垃圾的角色，也就是我们的应用程序，垃圾制造�
 命令行推荐 Arthas ，可视化界面推荐 JProfiler，此外还有一些在线的平台 gceasy、heaphero、fastthread ，美团内部的 Scalpel（一款自研的 JVM 问题诊断工具，暂时未开源）也比较好用。
 
 
-### <a name="72">GC 调优目的</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="82">GC 调优目的</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 将转移到老年代的对象数量降低到最小； 减少 GC 的执行时间。
 
-### <a name="73">GC 调优策略</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="83">GC 调优策略</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 **策略 1**：将新对象预留在新生代，由于 Full GC 的成本远高于 Minor GC，因此尽可能将对象分配在新生代是明智的做法，实际项目中根据 GC 日志分析新生代空间大小分配是否合理，适当通过“-Xmn”命令调节新生代大小，最大限度降低新对象直接进入老年代的情况。
 
 **策略 2**：大对象进入老年代，虽然大部分情况下，将对象分配在新生代是合理的。但是对于大对象这种做法却值得商榷，大对象如果首次在新生代分配可能会出现空间不足导致很多年龄不够的小对象被分配的老年代，破坏新生代的对象结构，可能会出现频繁的 full gc。因此，对于大对象，可以设置直接进入老年代（当然短命的大对象对于垃圾回收来说简直就是噩梦）。-XX:PretenureSizeThreshold 可以设置直接进入老年代的对象大小。
@@ -971,12 +1176,12 @@ Mutator：生产垃圾的角色，也就是我们的应用程序，垃圾制造�
 >MinorGC 执行时间不到50ms； Minor GC 执行不频繁，约10秒一次； Full GC 执行时间不到1s； Full GC 执行频率不算频繁，不低于10分钟1次。
 
 
-### <a name="74">调优指标</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="84">调优指标</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - 延迟（Latency）：也可以理解为最大停顿时间，即垃圾收集过程中一次 STW 的最长时间，越短越好，一定程度上可以接受频次的增大，GC 技术的主要发展方向。
 
 - 吞吐量（Throughput）：应用系统的生命周期内，由于 GC 线程会占用 Mutator 当前可用的 CPU 时钟周期，吞吐量即为 Mutator 有效花费的时间占系统总运行时间的百分比，例如系统运行了 100 min，GC 耗时 1 min，则系统吞吐量为 99%，吞吐量优先的收集器可以接受较长的停顿。
 
-### <a name="75">问题排查思路</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="85">问题排查思路</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 四种分析思路
 
 - 时序分析：先发生的事件是根因的概率更大，通过监控手段分析各个指标的异常时间点，还原事件时间线，如先观察到 CPU 负载高（要有足够的时间 Gap），那么整个问题影响链就可能是：
@@ -991,15 +1196,15 @@ Mutator：生产垃圾的角色，也就是我们的应用程序，垃圾制造�
 - 反证分析：对其中某一表象进行反证分析，即判断表象的发不发生跟结果是否有相关性，例如我们从整个集群的角度观察到某些节点慢查和 CPU 都正常，但也出了问题，那么整个问题影响链就可能是：
 > GC 耗时增大 -> 线程 Block 增多 ->  RT 上涨。
 
-### <a name="76">案例</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
-#### <a name="77">美团技术案例（基于CMS JDK1.8）</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="86">案例</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="87">美团技术案例（基于CMS JDK1.8）</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/basic/gcProcess.jpg)
 
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/basic/localIssue.png)
 
 
-##### <a name="78">场景一：动态扩容引起的空间震荡</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="88">场景一：动态扩容引起的空间震荡</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 服务刚刚启动时 GC 次数较多，最大空间剩余很多但是依然发生 GC， GC Cause 一般为 Allocation Failure，且在 GC 日志中会观察到经历一次 GC ，堆内各个空间的大小会被调整。
 
 解决：尽量将成对出现的空间大小配置参数设置成固定的，
@@ -1008,7 +1213,7 @@ Mutator：生产垃圾的角色，也就是我们的应用程序，垃圾制造�
 策略：保证 Java 虚拟机的堆是稳定的，避免弹性伸缩带来的额外 GC 消耗，确保 -Xms 和 -Xmx 设置的是一个值（即初始值和最大值一致），获得一个稳定的堆，同理在 MetaSpace 区也有类似的问题
 > 在不追求停顿时间的情况下震荡的空间也是有利的，可以动态地伸缩以节省空间，例如作为富客户端的 Java 应用。
 
-##### <a name="79">场景二：显式 GC 的去与留 (System.gc)</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="89">场景二：显式 GC 的去与留 (System.gc)</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 除了扩容缩容会触发 CMS GC 之外，还有
  1. Old 区达到回收阈值.
  2. MetaSpace 空间不足
@@ -1036,7 +1241,7 @@ CMS GC 共分为 Background 和 Foreground 两种模式，
 
 > 不止 CMS，在 G1 或 ZGC中开启 ExplicitGCInvokesConcurrent 模式，都会采用高性能的并发收集方式进行收集，不过还是建议在代码规范方面也要做好约束，规范好 System.gc 的使用。
 
-##### <a name="80">场景三：MetaSpace 区 OOM</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="90">场景三：MetaSpace 区 OOM</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 现象：JVM 在启动后或者某个时间点开始，MetaSpace 的已使用大小在持续增长，同时每次 GC 也无法释放，调大 MetaSpace 空间也无法彻底解决。
 
 --- 
@@ -1058,7 +1263,7 @@ MetaSpace 弹性伸缩：由于 MetaSpace 空间和 Heap 并不在一起，所�
 策略： 给 MetaSpace 区的使用率加一个监控，如果指标有波动提前发现并解决问题。
 
 
-##### <a name="81">场景四：过早晋升 </a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="91">场景四：过早晋升 </a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 现象：
 1. 分配速率接近于晋升速率，对象晋升年龄较小
 2. Full GC 比较频繁，且经历过一次 GC 之后 Old 区的变化比例非常大。
@@ -1082,12 +1287,12 @@ MetaSpace 弹性伸缩：由于 MetaSpace 空间和 Heap 并不在一起，所�
 - 偶发较大：通过内存分析工具找到问题代码，从业务逻辑上做一些优化。
 - 一直较大：当前的 Collector 已经不满足 Mutator 的期望了，这种情况要么扩容 Mutator 的 VM，要么调整 GC 收集器类型或加大空间。
 
-##### <a name="82">场景五：CMS Old GC 频繁 </a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="92">场景五：CMS Old GC 频繁 </a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 现象：Old 区频繁的做 CMS GC，但是每次耗时不是特别长，整体最大 STW 也在可接受范围内，但由于 GC 太频繁导致吞吐下降比较多。
  
 > 描述过于抽象，见文章
 
-##### <a name="83">场景六：单次 CMS Old GC 耗时长</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="93">场景六：单次 CMS Old GC 耗时长</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 CMS 在回收的过程中，STW 的阶段主要是 Init Mark 和 Final Remark 这两个阶段
 - 初始标记 Init Mark ： 整个过程比较简单，从 GC Root 出发标记 Old 中的对象，处理完成后借助 BitMap 处理下 Young 区对 Old 区的引用，整个过程基本都比较快，很少会有较大的停顿。
 - 最终标记 Final Remark ：Final Remark 的开始阶段与 Init Mark 处理的流程相同，但是后续多了 **Card Table 遍历**、**Reference 实例的清理**并将其加入到 Reference 维护的 pend_list 中，如果要收集元数据信息，还要清理 SystemDictionary、CodeCache、SymbolTable、StringTable 等组件中不再使用的资源
@@ -1101,7 +1306,7 @@ CMS 在回收的过程中，STW 的阶段主要是 Init Mark 和 Final Remark �
     - scrub symbol table 表示清理元数据符号引用耗时，观察 MetaSpace 区的历史使用峰值，看是否有使用动态类加载或者 DSL 处理等。
         - > 如果MateSpace 数据没啥变化，可以通过 -XX:-CMSClassUnloadingEnabled 来避免 MetaSpace 的处理。
  
-##### <a name="84">场景七：内存碎片&收集器退化</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="94">场景七：内存碎片&收集器退化</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 现象：
 并发的 CMS GC 算法，退化为 Foreground 单线程串行 GC 模式，STW 时间超长，有时会长达十几秒。其中 CMS 收集器退化后单线程串行 GC 算法有两种：
 - 带压缩动作的算法，称为 MSC，上面我们介绍过，使用标记-清理-压缩，单线程全暂停的方式，对整个堆进行垃圾收集，也就是真正意义上的 Full GC，暂停时间要长于普通 CMS。
@@ -1127,7 +1332,7 @@ CMS 在回收的过程中，STW 的阶段主要是 Init Mark 和 Final Remark �
 - 浮动垃圾：视情况控制每次晋升对象的大小，或者缩短每次 CMS GC 的时间，必要时可调节 NewRatio 的值。另外就是使用 -XX:+CMSScavengeBeforeRemark 在过程中提前触发一次 Young GC，防止后续晋升过多对象。
 
 
-##### <a name="85">场景八：堆外内存 OOM</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="95">场景八：堆外内存 OOM</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 现象： 内存使用率不断上升，甚至开始使用 SWAP 内存，同时可能出现 GC 时间飙升，线程被 Block 等现象，通过 top 命令发现 Java 进程的 RES 甚至超过了 -Xmx 的大小。
 
 JVM 的堆外内存泄漏，主要有两种的原因：
@@ -1137,21 +1342,21 @@ JVM 的堆外内存泄漏，主要有两种的原因：
 策略： 在项目中添加 -XX:NativeMemoryTracking=detail JVM参数后重启项目（需要注意的是，打开 NMT 会带来 5%~10% 的性能损耗）。使用命令 jcmd pid VM.native_memory detail 查看内存分布。
     
 
-##### <a name="86">场景九：JNI 引发的 GC 问题</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="96">场景九：JNI 引发的 GC 问题</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 > 太抽象了
 
-#### <a name="87">不恰当的数据结构导致内存过大</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="97">不恰当的数据结构导致内存过大</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 场景：-Xms4g -Xmx8g -Xmn1g 使用ParNew + CMS组合。业务上需要10min加载80MB的数据到内存，会产生100W HashMap entry， Minor GC超过500ms，因为新生代使用了标记复制算法\
 
 方案：不从修改程序，仅从GC调优，可以直接去掉SurvivorRatio，让新生代存活的对象一次Minor GC就进入到老年代` -XX:SurvivorRatio=65536 -XX:MaxTenuringThreshold=0`（或者-XX:+AlwaysTenure)
-#### <a name="88">堆外内存导致溢出错误</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="98">堆外内存导致溢出错误</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 NIO使用直接内存复制，而虚拟机中最大最小内存直接设值成系统内存大小了
 
-#### <a name="89">异步系统Socket连接</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="99">异步系统Socket连接</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 Socket 使用BIO连接异步处理，导致了系统连接数过多，进而虚拟机崩溃
 
-#### <a name="90">Evosuite 自动生成单元测试</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="100">Evosuite 自动生成单元测试</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 表现：maven build时候单元测试需要一个多小时。
 
 排查：
@@ -1172,12 +1377,12 @@ YGC出现大量复制工作，很耗费时间。每次分配的空间过大，�
 
 解决处理：死循环线程、修改自动生成的test分配合理内存。
 
-#### <a name="91">其他案例分析资料</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="101">其他案例分析资料</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - [JSP引起的老年代不回收场景](https://blog.csdn.net/u012948161/article/details/102983795?utm_medium=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-1.control&depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-1.control)
 - [native memory](http://mahaijin.github.io/2015/04/27/JVM%E7%9A%84Heap%20Memory%E5%92%8CNative%20Memory/)
 - [美团：Java中9种常见的CMS GC问题分析与解决](https://mp.weixin.qq.com/s/RFwXYdzeRkTG5uaebVoLQw)
 
-#### <a name="92">其他建议</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="102">其他建议</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 1. 禁用偏向锁：偏向锁在只有一个线程使用到该锁的时候效率很高，但是在竞争激烈情况会升级成轻量级锁，此时就需要先消除偏向锁，这个过程是 STW 的。
     > 在已知并发激烈的前提下，一般会禁用偏向锁 -XX:-UseBiasedLocking 来提高性能。
 2. 主动式 GC： 观测 Old 区的使用情况，即将到达阈值时将应用服务摘掉流量，手动触发一次 Major GC。必要时引入，会影响系统健壮性。
